--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@base-ui/react": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lightweight-charts": "^5.1.0",
     "lucide-react": "^0.562.0",
     "next": "16.1.2",
     "radix-ui": "^1.4.3",
